name:                fdg-hsk
version:             0.1.0.0
description:         Partial implmentation of the code in Functional Differential Geometry
homepage:            https://github.com/o1lo01ol1o/fdg-hsk
bug-reports:         https://github.com/o1lo01ol1o/fdg-hsk/issues
license:             MIT
license-file:        LICENSE
author:              Tim Pierson
maintainer:          tim.pierson@gmail.com
copyright:           2017 Tim Pierson
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.24
tested-with:         GHC == 8.2.1

library
  hs-source-dirs:      src
  exposed-modules:     Tuple
  ghc-options:         -Wall
  build-depends:       base >= 4.6 && <5.0
                     , singletons
                       , numhask
                     , numhask-array
                     , hvect
                     , containers
                       ,ghc-typelits-natnormalise
                     
  default-language:    Haskell2010

test-suite fdg-hsk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fdg-hsk
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark fdg-hsk-benchmark
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base
                     , criterion
                     , fdg-hsk

source-repository head
  type:                git
  location:            https://github.com/o1lo01ol1o/fdg-hsk.git
